@@ -1,4 +1,6 @@
 3.1.7
+	%D format string for getting the list of matching DNSRBL
+	Avoid performing multiple DNSRBL checks for the same IP
 	Allow reusing in the ACL of properties gathered from urlcheck
 	Fix wrong display of %Xc %Xe and %Xh substitutions 
 	Fix documentation: %Xh instead of %Xr
